// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp/> tests should render properly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`<GifExpertApp/> tests should show category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Game of Thrones"
      key="Game of Thrones"
    />
    <GifGrid
      category="Bloodborne"
      key="Bloodborne"
    />
  </ol>
</Fragment>
`;
